# triangulate

./: CMakeLists.txt  README.md  triangulate.cpp  triangulate.h
